Trasformed notebook into script 'identify_build_date'. #15

--- a/NLP Python Jupyter Notebooks/Script - Identify build date/Identify build date.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Identify build date/Identify build date.ipynb
@@ -477,6 +477,164 @@
     "        \n",
     "list(result_for_csv_file_after)"
    ]
+  },
+  {
+   "source": [
+    "# Code above refactored to script"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'section_number': '7',\n",
+       "  'part_value': '2',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'before',\n",
+       "  'value_1': '2 January 1988'},\n",
+       " {'section_number': '8',\n",
+       "  'part_value': '2',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'before',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '22',\n",
+       "  'part_value': '2',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'before',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '23',\n",
+       "  'part_value': '2',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'before',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '24',\n",
+       "  'part_value': '5',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'before',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '7',\n",
+       "  'part_value': '1',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '2 January 1988'},\n",
+       " {'section_number': '8',\n",
+       "  'part_value': '1',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '15',\n",
+       "  'part_value': '4',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '22',\n",
+       "  'part_value': '1',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '23',\n",
+       "  'part_value': '1',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 1992'},\n",
+       " {'section_number': '23',\n",
+       "  'part_value': '4',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 2002'},\n",
+       " {'section_number': '24',\n",
+       "  'part_value': '1',\n",
+       "  'sub_part_value': 'none',\n",
+       "  'relation': 'after',\n",
+       "  'value_1': '1 January 1992'}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Something that must be done \n",
+    "# to make the notebook reload a function\n",
+    "# from a costum .py file.\n",
+    "#\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import importlib\n",
+    "\n",
+    "import identify_build_date\n",
+    "import identify_section_span # Other component 1\n",
+    "import identify_sentence_type # Other component 2\n",
+    "\n",
+    "from identify_build_date import get_section_from_sentence_index_number\n",
+    "from identify_build_date import get_sentence_type_from_sentence_index_number\n",
+    "from identify_build_date import find_word\n",
+    "\n",
+    "# Other component 1\n",
+    "from identify_section_span import list_section_span_from_file_lines\n",
+    "\n",
+    "# Other component 2\n",
+    "from identify_sentence_type import list_sentence_type_from_file_lines\n",
+    "\n",
+    "importlib.reload(identify_build_date)\n",
+    "importlib.reload(identify_section_span)\n",
+    "importlib.reload(identify_sentence_type)\n",
+    "\n",
+    "################\n",
+    "################\n",
+    "\n",
+    "# Other component 1\n",
+    "forward_identify_section_span = list_section_span_from_file_lines(file_lines)\n",
+    "\n",
+    "#test = get_section_from_sentence_index_number(103, forward_identify_section_span)\n",
+    "\n",
+    "# Other component 2\n",
+    "forward_sentence_type_in_a_list = list_sentence_type_from_file_lines(file_lines)\n",
+    "\n",
+    "#test2 = get_sentence_type_from_sentence_index_number(111, forward_sentence_type_in_a_list)\n",
+    "\n",
+    "find_before = find_word(file_lines,forward_sentence_type_in_a_list,forward_identify_section_span,\"before\")\n",
+    "find_after = find_word(file_lines,forward_sentence_type_in_a_list,forward_identify_section_span,\"after\")\n",
+    "\n",
+    "result_items = []\n",
+    "\n",
+    "for result_item in find_before:\n",
+    "    data = {}\n",
+    "    data['section_number'] = result_item[0]\n",
+    "    data['part_value'] = result_item[1]\n",
+    "    data['sub_part_value'] = result_item[2]\n",
+    "    data['relation'] = result_item[3]\n",
+    "    data['value_1'] = result_item[4]\n",
+    "    result_items.append(data)\n",
+    "\n",
+    "for result_item in find_after:\n",
+    "    data = {}\n",
+    "    data['section_number'] = result_item[0]\n",
+    "    data['part_value'] = result_item[1]\n",
+    "    data['sub_part_value'] = result_item[2]\n",
+    "    data['relation'] = result_item[3]\n",
+    "    data['value_1'] = result_item[4]\n",
+    "    result_items.append(data)\n",
+    "\n",
+    "result_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
