Created API resource 'identify-build-date-in-chapter-text' #17

--- a/NLP Python Jupyter Notebooks/Script - Identify build date/Identify build date.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Identify build date/Identify build date.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -497,67 +497,67 @@
        "[{'section_number': '7',\n",
        "  'part_value': '2',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'before',\n",
-       "  'value_1': '2 January 1988'},\n",
+       "  'relation_term': 'before',\n",
+       "  'date': '2 January 1988'},\n",
        " {'section_number': '8',\n",
        "  'part_value': '2',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'before',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'before',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '22',\n",
        "  'part_value': '2',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'before',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'before',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '23',\n",
        "  'part_value': '2',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'before',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'before',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '24',\n",
        "  'part_value': '5',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'before',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'before',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '7',\n",
        "  'part_value': '1',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '2 January 1988'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '2 January 1988'},\n",
        " {'section_number': '8',\n",
        "  'part_value': '1',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '15',\n",
        "  'part_value': '4',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '22',\n",
        "  'part_value': '1',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '23',\n",
        "  'part_value': '1',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 1992'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 1992'},\n",
        " {'section_number': '23',\n",
        "  'part_value': '4',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 2002'},\n",
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 2002'},\n",
        " {'section_number': '24',\n",
        "  'part_value': '1',\n",
        "  'sub_part_value': 'none',\n",
-       "  'relation': 'after',\n",
-       "  'value_1': '1 January 1992'}]"
+       "  'relation_term': 'after',\n",
+       "  'date': '1 January 1992'}]"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 34
     }
    ],
    "source": [
@@ -613,8 +613,8 @@
     "    data['section_number'] = result_item[0]\n",
     "    data['part_value'] = result_item[1]\n",
     "    data['sub_part_value'] = result_item[2]\n",
-    "    data['relation'] = result_item[3]\n",
-    "    data['value_1'] = result_item[4]\n",
+    "    data['relation_term'] = result_item[3]\n",
+    "    data['date'] = result_item[4]\n",
     "    result_items.append(data)\n",
     "\n",
     "for result_item in find_after:\n",
@@ -622,19 +622,12 @@
     "    data['section_number'] = result_item[0]\n",
     "    data['part_value'] = result_item[1]\n",
     "    data['sub_part_value'] = result_item[2]\n",
-    "    data['relation'] = result_item[3]\n",
-    "    data['value_1'] = result_item[4]\n",
+    "    data['relation_term'] = result_item[3]\n",
+    "    data['date'] = result_item[4]\n",
     "    result_items.append(data)\n",
     "\n",
     "result_items"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
