Renaming spacy script to 'Script - Spacy matching rule - Identify date - EN'.  #15

--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify date - EN/Identify date.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify date - EN/Identify date.ipynb
@@ -35,7 +35,24 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: spacy in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\nRequirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.8.0)\nRequirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\nRequirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (7.4.5)\nRequirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.0.5)\nRequirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.19.3)\nRequirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (3.0.5)\nRequirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.1.3)\nRequirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.0)\nRequirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.7.4)\nRequirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (4.54.1)\nRequirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\nRequirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (49.2.1)\nRequirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.25.1)\nRequirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (4.0.0)\nRequirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.12.5)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.2)\nRequirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n"
+      "Requirement already satisfied: spacy in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.1.3)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.0.5)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.19.3)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (49.2.1)\n",
+      "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (7.4.5)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.7.4)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (3.0.5)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.25.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (4.54.1)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.8.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.2)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.12.5)\n"
      ]
     }
    ],
@@ -63,115 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "[autoreload of numpy._globals failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 159, in reload\n",
-      "    raise ImportError(msg.format(parent_name),\n",
-      "ImportError: parent 'numpy' not in sys.modules\n",
-      "]\n",
-      "[autoreload of numpy.__config__ failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 159, in reload\n",
-      "    raise ImportError(msg.format(parent_name),\n",
-      "ImportError: parent 'numpy' not in sys.modules\n",
-      "]\n",
-      "[autoreload of numpy.version failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 159, in reload\n",
-      "    raise ImportError(msg.format(parent_name),\n",
-      "ImportError: parent 'numpy' not in sys.modules\n",
-      "]\n",
-      "[autoreload of numpy._distributor_init failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 159, in reload\n",
-      "    raise ImportError(msg.format(parent_name),\n",
-      "ImportError: parent 'numpy' not in sys.modules\n",
-      "]\n",
-      "[autoreload of numpy.compat failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 159, in reload\n",
-      "    raise ImportError(msg.format(parent_name),\n",
-      "ImportError: parent 'numpy' not in sys.modules\n",
-      "]\n",
-      "[autoreload of numpy.matrixlib failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 613, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 790, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\matrixlib\\__init__.py\", line 6, in <module>\n",
-      "    __all__ = defmatrix.__all__\n",
-      "NameError: name 'defmatrix' is not defined\n",
-      "]\n",
-      "[autoreload of numpy.lib failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\imp.py\", line 314, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\importlib\\__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 613, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 790, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\lib\\__init__.py\", line 45, in <module>\n",
-      "    __all__ += type_check.__all__\n",
-      "NameError: name 'type_check' is not defined\n",
-      "]\n",
-      "[autoreload of numpy.ma.core failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
-      "    update_instances(old, new)\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
-      "    ref.__class__ = new\n",
-      "  File \"C:\\Users\\lhustvei\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\ma\\core.py\", line 6535, in __setattr__\n",
-      "    return super(MaskedConstant, self).__setattr__(attr, value)\n",
-      "TypeError: super(type, obj): obj must be an instance or subtype of type\n",
-      "]\n",
       "Requirement already satisfied: numpy==1.19.3 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.19.3)\n"
      ]
     }
@@ -185,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +444,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 5
     }
    ],
    "source": [
@@ -576,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 8
     }
    ],
    "source": [
@@ -602,11 +517,11 @@
     "\n",
     "import importlib\n",
     "\n",
-    "import identify_date\n",
+    "import spacy_matching_rule_identify_date_en\n",
     "\n",
-    "from identify_date import identify_date_in_text\n",
+    "from spacy_matching_rule_identify_date_en import identify_date_in_text\n",
     "\n",
-    "importlib.reload(identify_date)\n",
+    "importlib.reload(spacy_matching_rule_identify_date_en)\n",
     "\n",
     "################\n",
     "################\n",
@@ -618,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -656,11 +571,11 @@
     "\n",
     "import importlib\n",
     "\n",
-    "import identify_date\n",
+    "import spacy_matching_rule_identify_date_en\n",
     "\n",
-    "from identify_date import identify_date_in_text\n",
+    "from spacy_matching_rule_identify_date_en import identify_date_in_text\n",
     "\n",
-    "importlib.reload(identify_date)\n",
+    "importlib.reload(spacy_matching_rule_identify_date_en)\n",
     "\n",
     "################\n",
     "################\n",
@@ -685,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -708,11 +623,11 @@
     "\n",
     "import importlib\n",
     "\n",
-    "import identify_date\n",
+    "import spacy_matching_rule_identify_date_en\n",
     "\n",
-    "from identify_date import merge_spacy_entity_results_to_spacy_ner_format\n",
+    "from spacy_matching_rule_identify_date_en import merge_spacy_entity_results_to_spacy_ner_format\n",
     "\n",
-    "importlib.reload(identify_date)\n",
+    "importlib.reload(spacy_matching_rule_identify_date_en)\n",
     "\n",
     "################\n",
     "################\n",
@@ -743,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1294,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 11
     }
    ],
    "source": [
@@ -1423,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1447,11 +1362,11 @@
     "\n",
     "import importlib\n",
     "\n",
-    "import identify_date\n",
+    "import spacy_matching_rule_identify_date_en\n",
     "\n",
-    "from identify_date import identify_date_in_spacy_lines\n",
+    "from spacy_matching_rule_identify_date_en import identify_date_in_spacy_lines\n",
     "\n",
-    "importlib.reload(identify_date)\n",
+    "importlib.reload(spacy_matching_rule_identify_date_en)\n",
     "\n",
     "################\n",
     "################\n",
@@ -1465,13 +1380,6 @@
     "from spacy import displacy\n",
     "displacy.render(result, style='ent', manual=True, options=options)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
