Vessel length overall in Norwegian can now detect both single and double lengths. #15

--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify vessel length overall - NO/Identify vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify vessel length overall - NO/Identify vessel length overall.ipynb
@@ -97,14 +97,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\nTrue\nTrue\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_float(n):\n",
+    "    try:\n",
+    "        support_float_with_norwegian_format = n.replace(',','.')\n",
+    "        float_n = float(support_float_with_norwegian_format)\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "# test\n",
+    "print(is_float('test'))\n",
+    "print(is_float('4'))\n",
+    "print(is_float('4.5'))\n",
+    "print(is_float('4,5'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(1) Fartøy med største lengde mellom \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    10,67 og 15 meter\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH_OVERALL</span>\n</mark>\n skal ha brannslokningsanlegg.</div></span>"
+      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(1) Fartøy med største lengde mellom \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    10,67 og 15 meter\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH</span>\n</mark>\n skal ha brannslokningsanlegg.</div></span>"
      },
      "metadata": {}
     }
@@ -125,33 +155,46 @@
     "\n",
     "matcher = Matcher(nlp.vocab)\n",
     "\n",
-    "length_overall_pattern = [{\"TEXT\": {\"REGEX\": \"[0-9]+[,]+[0-9]|[0-9]\"}},\n",
-    "{\"LOWER\": {\"IN\": [\"og\"]}},\n",
-    "{\"TEXT\": {\"REGEX\": \"[0-9]+[,]+[0-9]|[0-9]\"}},\n",
-    "{\"LOWER\": {\"IN\": [\"meter\"]}}]\n",
+    "length_pattern = [\n",
+    "    {\"TEXT\": {\"REGEX\": \"[0-9]+[,]+[0-9]|[0-9]\"}},\n",
+    "    {\"LOWER\": {\"IN\": [\"meter\"]}}]\n",
     "\n",
-    "matcher.add(\"LENGTH_OVERALL\", None, length_overall_pattern)\n",
+    "matcher.add(\"LENGTH\", None, length_pattern)\n",
     "\n",
     "result = []\n",
     "\n",
     "for match_id, token_start, token_end in matcher(doc):\n",
     "\n",
+    "    match_id_as_string = nlp.vocab.strings[match_id]\n",
+    "\n",
+    "    final_token_start = token_start\n",
+    "    final_token_end = token_end\n",
+    "\n",
+    "    #\n",
+    "    # Expand result if extra length detected in the words before in the line\n",
+    "    #\n",
+    "    if match_id_as_string == \"LENGTH\" and token_start > 0:\n",
+    "        prev_token_1 = doc[token_start-1].text\n",
+    "        if prev_token_1 in (\"og\", \"til\"):\n",
+    "            prev_token_2 = doc[token_start-2].text\n",
+    "            if is_float(prev_token_2):\n",
+    "                final_token_start = token_start-2\n",
+    "\n",
+    "    #\n",
     "    # convert token_span to char_span.\n",
     "    # char_span is needed to display correctly withdisplacy.render().\n",
-    "    span = doc[token_start:token_end]\n",
+    "    #\n",
+    "    span = doc[final_token_start:final_token_end]\n",
     "    span_char_start = span[0].idx\n",
     "    span_char_end = span[-1].idx + len(span[-1].text)\n",
     "\n",
-    "    match_id_as_string = nlp.vocab.strings[match_id]\n",
-    "\n",
+    "    # return result\n",
     "    identified_entity = {'start': span_char_start, 'end': span_char_end, 'label': match_id_as_string}\n",
     "    result.append(identified_entity)\n",
     "\n",
-    "#result\n",
-    "\n",
     "# display result with spacy styling\n",
     "display_this_result = {'text': text, 'ents': sorted(result, key=lambda x: x['start']), 'title': 0}\n",
-    "options = {\"colors\": {\"LENGTH_OVERALL\": \"yellow\"}}\n",
+    "options = {\"colors\": {\"LENGTH\": \"yellow\"}}\n",
     "from spacy import displacy\n",
     "displacy.render(display_this_result, style='ent', manual=True, options=options)"
    ]
