--- a/NLP Python Jupyter Notebooks/Get scope - Machine power/V2 - Get scope - Machine power.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Machine power/V2 - Get scope - Machine power.ipynb
@@ -135,21 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "False\nTrue\nTrue\n"
+      "False\nTrue\nTrue\nTrue\n"
      ]
     }
    ],
    "source": [
     "def is_float(n):\n",
     "    try:\n",
-    "        float_n = float(n)\n",
+    "        support_float_with_norwegian_format = n.replace(',','.')\n",
+    "        float_n = float(support_float_with_norwegian_format)\n",
     "    except ValueError:\n",
     "        return False\n",
     "    else:\n",
@@ -158,7 +159,8 @@
     "# test\n",
     "print(is_float('test'))\n",
     "print(is_float('4'))\n",
-    "print(is_float('4.5'))"
+    "print(is_float('4.5'))\n",
+    "print(is_float('4,5'))"
    ]
   },
   {
