Identify length prefix. #15

--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify vessel length overall - NO/Identify vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify vessel length overall - NO/Identify vessel length overall.ipynb
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(1) Fartøy med største lengde mellom \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    10,67 og 15 meter\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH</span>\n</mark>\n skal ha brannslokningsanlegg.</div></span>"
+      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(4) Fartøy med største lengde \n<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    mindre enn\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH_PREFIX</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    10,67 meter\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH</span>\n</mark>\n bygget etter 1. januar 1992 kan alternativt være utstyrt med brannslokningsanlegg i samsvar med retningslinjer fastsatt i kapittel Y14 i Nordisk Båt Standard (1990).</div></span>"
      },
      "metadata": {}
     }
@@ -149,7 +149,8 @@
     "# Does not have a POS tagger.\n",
     "nlp = Norwegian()\n",
     "\n",
-    "text = \"(1) Fartøy med største lengde mellom 10,67 og 15 meter skal ha brannslokningsanlegg.\"\n",
+    "#text = \"(1) Fartøy med største lengde mellom 10,67 og 15 meter skal ha brannslokningsanlegg.\"\n",
+    "text = \"(4) Fartøy med største lengde mindre enn 10,67 meter bygget etter 1. januar 1992 kan alternativt være utstyrt med brannslokningsanlegg i samsvar med retningslinjer fastsatt i kapittel Y14 i Nordisk Båt Standard (1990).\"\n",
     "\n",
     "doc = nlp(text)\n",
     "\n",
@@ -160,6 +161,15 @@
     "    {\"LOWER\": {\"IN\": [\"meter\"]}}]\n",
     "\n",
     "matcher.add(\"LENGTH\", None, length_pattern)\n",
+    "\n",
+    "length_prefix_pattern_1 = [\n",
+    "    {\"LOWER\": {\"IN\": [\"mindre\"]}},\n",
+    "    {\"LOWER\": {\"IN\": [\"enn\"]}}]\n",
+    "\n",
+    "length_prefix_pattern_2 = [\n",
+    "    {\"LOWER\": {\"IN\": [\"under\"]}}]\n",
+    "\n",
+    "matcher.add(\"LENGTH_PREFIX\", None, length_prefix_pattern_1, length_prefix_pattern_2)\n",
     "\n",
     "result = []\n",
     "\n",
@@ -194,7 +204,7 @@
     "\n",
     "# display result with spacy styling\n",
     "display_this_result = {'text': text, 'ents': sorted(result, key=lambda x: x['start']), 'title': 0}\n",
-    "options = {\"colors\": {\"LENGTH\": \"yellow\"}}\n",
+    "options = {\"colors\": {\"LENGTH\": \"yellow\", \"LENGTH_PREFIX\": \"orange\"}}\n",
     "from spacy import displacy\n",
     "displacy.render(display_this_result, style='ent', manual=True, options=options)"
    ]
